# FraudDetection

./: .gitignore  README.md  explotary_data_analysis.ipynb  model_neural_network.ipynb  model_xgboost.ipynb  pyproject.toml
backup/: model_nn.ipynb
fraud/: constants.py  plots.py  preprocess.py
fraud/nn/: classifier.py  data.py  metrics.py  model.py  train.py
model_trained/checkpoints/: epoch=17-val_loss=0.60.ckpt
model_trained/mlflow/0/: meta.yaml
model_trained/mlflow/514800746080220554/: meta.yaml
model_trained/mlflow/514800746080220554/a36d73fb4a8747728e2ecfdb9d2eed1c/: meta.yaml
model_trained/mlflow/514800746080220554/a36d73fb4a8747728e2ecfdb9d2eed1c/metrics/: epoch  test_auroc  test_f1_score_weighted  test_loss  test_precision_weighted  test_recall_weighted  train_accuracy_macro  train_auroc  train_f1_score_weighted  train_loss  train_recall_weighted  val_accuracy_macro  val_auroc  val_f1_score_weighted  val_loss  val_recall_weighted
model_trained/mlflow/514800746080220554/a36d73fb4a8747728e2ecfdb9d2eed1c/tags/: mlflow.runName  mlflow.source.name
